# mining-agent

./: .gitignore  2026-03-27-thermophile-mining-implementation-plan.md  README.md  STATE.md  pyproject.toml
config/: pipeline.example.yaml  platform.example.yaml  platform.server.ubuntu.yaml
docs/: repo-intro-for-ppt.md
docs/superpowers/: 2026-03-27-thermo-mining-control-plane-mvp-handoff.md  2026-03-28-thermo-mining-control-plane-mvp-final-handoff.md  2026-03-30-server-adaptation-handoff.md  2026-04-02-seeded-mining-implementation-handoff.md
inputs/manifests/: samples.example.tsv
scripts/: protrek_build_index.py  protrek_query.py  server_probe.py  start_all.sh  start_web.sh  status.sh  stop.sh
src/: requests.py  yaml.py
src/thermo_mining/: cli.py  config.py  io_utils.py  manifest.py  models.py  pipeline.py  reporting.py  settings.py  stage_layout.py
src/thermo_mining/control_plane/: __init__.py  fs_service.py  (+10 more)
tests/: test_config.py  test_control_plane_bootstrap.py  test_manifest.py  test_pipeline_cli.py  test_server_probe.py  test_settings.py
tests/control_plane/: test_fastq_pairing.py  test_fs_service.py  test_job_manager.py  test_planner.py  test_run_store.py  test_runner.py  test_schemas.py  test_upstream_steps.py
tests/steps/: test_foldseek_client.py  test_mmseqs_cluster.py  test_prefilter.py  test_protrek_bridge.py  test_rerank.py  test_seed_recall_merge.py  test_seed_sequence_recall.py  test_seed_structure_recall.py  test_structure_predict.py  test_temstapro_screen.py
tests/web/: test_fs_and_plan_api.py  test_pages.py  test_runs_and_chat_api.py
(+35 files in other folders)
