[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermo-mining"
version = "0.1.0"
description = "Phase 1 thermophilic protein mining pipeline"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0,<7",
  "requests>=2.32,<3",
  "pydantic>=2.9,<3",
  "fastapi>=0.115,<1",
  "uvicorn>=0.32,<1",
  "openai>=1.54,<2",
  "httpx>=0.28,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[project.scripts]
thermo-mining = "thermo_mining.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
